feat(hosp_dx): add and test the .py script for generating the hosp dx table

--- a/notebooks/hosp_dx_dev.ipynb
+++ b/notebooks/hosp_dx_dev.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,44 +60,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-07-29 17:30:02,903 - INFO - initialized logging at logs/etl.log\n",
-      "2025-07-29 17:30:02,905 - INFO - initialized logging at logs/etl.log\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<module 'src.tables.ecmo_mcs' from '/Users/wliao0504/code/clif/CLIF-MIMIC/src/tables/ecmo_mcs.py'>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import src.tables.ecmo_mcs as ecmo_mcs\n",
-    "reload(ecmo_mcs)\n",
-    "# test_out = ecmo_mcs._test()\n",
-    "# clif_ecmo = read_from_rclif(\"ecmo_mcs\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -106,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,13 +76,67 @@
     "SELECT \n",
     "    CAST(dx.hadm_id AS VARCHAR) as hospitalization_id,\n",
     "    CAST(dx.icd_code AS VARCHAR) as diagnosis_code,\n",
-    "    CAST(dx.icd_version AS VARCHAR) as diagnosis_code_format,\n",
+    "    CASE WHEN dx.icd_version = 10 THEN 'ICD-10-CM'\n",
+    "         WHEN dx.icd_version = 9 THEN 'ICD-9-CM'\n",
+    "         ELSE NULL\n",
+    "         END as diagnosis_code_format,\n",
     "    CAST(d.long_title AS VARCHAR) as diagnosis_name,\n",
+    "    CAST(NULL AS VARCHAR) as diagnosis_type,\n",
+    "    CAST(NULL AS VARCHAR) as present_on_admission\n",
     "FROM '{mimic_table_pathfinder('diagnoses_icd')}' dx\n",
     "LEFT JOIN '{mimic_table_pathfinder('d_icd_diagnoses')}' d\n",
     "    USING (icd_code, icd_version)\n",
     "\"\"\"\n",
     "hosp_dx = duckdb.sql(query).df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "diagnosis_code_format\n",
+       "ICD-10-CM    3455747\n",
+       "ICD-9-CM     2908741\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hosp_dx.value_counts('diagnosis_code_format', dropna=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "hospitalization_id       object\n",
+       "diagnosis_code           object\n",
+       "diagnosis_code_format    object\n",
+       "diagnosis_name           object\n",
+       "diagnosis_type           object\n",
+       "present_on_admission     object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hosp_dx.dtypes"
    ]
   },
   {
@@ -245,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -274,14 +290,43 @@
     "FROM u099_only\n",
     "\"\"\"\n",
     "u099_only_count = duckdb.sql(query).df()\n",
-    "print(u099_only_count)\n"
+    "print(u099_only_count)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Validate"
+    "# Pipeline run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-07-31 22:57:22,751 - INFO - initialized logging at logs/etl.log\n",
+      "2025-07-31 22:57:22,752 - INFO - testing all...\n",
+      "2025-07-31 22:57:22,753 - INFO - initialized logging at logs/etl.log\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'schema_tested': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import src.tables.hospital_diagnosis as hospital_diagnosis\n",
+    "reload(hospital_diagnosis)\n",
+    "test_out = hospital_diagnosis._test()\n",
+    "# clif_hosp_dx = read_from_rclif(\"hospital_diagnosis\")"
    ]
   },
   {
