--- a/notebooks/mac_dev.ipynb
+++ b/notebooks/mac_dev.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,6 +224,8 @@
     "    , totalamount, totalamountuom, originalamount, originalrate\n",
     "    , ordercategoryname, ordercategorydescription\n",
     "    , e.label\n",
+    "    , CASE WHEN (endtime - starttime) = INTERVAL '1 minute'\n",
+    "        THEN 1 ELSE 0 END AS duration_1min\n",
     "FROM mac_events e\n",
     "LEFT JOIN mac_mapping m USING (itemid)\n",
     "ORDER BY hadm_id, starttime, linkorderid, med_category, endtime\n",
@@ -274,7 +276,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "find_intm_where_clause = \"\"\"\n",
+    "ordercategoryname = '05-Med Bolus'\n",
+    "    OR ordercategorydescription = 'Drug Push'\n",
+    "    OR statusdescription = 'Bolus'\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -288,18 +303,16 @@
     }
    ],
    "source": [
-    "query = \"\"\"\n",
+    "query = f\"\"\"\n",
     "SELECT *\n",
+    "    -- flags to identify intermittents\n",
     "    , CASE WHEN ordercategoryname = '05-Med Bolus'\n",
     "        THEN 1 ELSE 0 END AS intm_by_ordercategoryname\n",
     "    , CASE WHEN ordercategorydescription = 'Drug Push'\n",
     "        THEN 1 ELSE 0 END AS intm_by_ordercategorydescription\n",
     "    , CASE WHEN statusdescription = 'Bolus'\n",
     "        THEN 1 ELSE 0 END AS intm_by_statusdescription\n",
-    "    , CASE WHEN (endtime - starttime) = INTERVAL '1 minute'\n",
-    "        THEN 1 ELSE 0 END AS duration_1min\n",
-    "    \n",
-    "    -- add flags to count discrepencies, i.e. if all of the ostensible intermittents satisfy the 1min duration rule\n",
+    "    -- flags to count discrepencies, i.e. if all of the ostensible intermittents satisfy the 1min duration rule\n",
     "    , CASE WHEN intm_by_ordercategorydescription = 1 AND duration_1min = 0\n",
     "        THEN 1 ELSE 0 END AS not_1min_ordercategorydescription\n",
     "    , CASE WHEN intm_by_ordercategoryname = 1 AND duration_1min = 0\n",
@@ -307,9 +320,8 @@
     "    , CASE WHEN intm_by_statusdescription = 1 AND duration_1min = 0\n",
     "        THEN 1 ELSE 0 END AS not_1min_statusdescription\n",
     "FROM mac_selected_and_mapped\n",
-    "WHERE ordercategoryname = '05-Med Bolus'\n",
-    "    OR ordercategorydescription = 'Drug Push'\n",
-    "    OR statusdescription = 'Bolus'\n",
+    "WHERE {find_intm_where_clause}\n",
+    "\n",
     "\"\"\"\n",
     "mac_intm = duckdb.sql(query).df()\n",
     "\n",
@@ -327,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,10 +352,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if any of continuous events has 1-min duration\n",
+    "query = f\"\"\"\n",
+    "SELECT *\n",
+    "FROM mac_selected_and_mapped\n",
+    "WHERE NOT ({find_intm_where_clause})\n",
+    "\"\"\"\n",
+    "intermittent_removed = duckdb.sql(query).df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = f\"\"\"\n",
+    "SELECT *\n",
+    "FROM intermittent_removed\n",
+    "WHERE duration_1min = 1\n",
+    "\"\"\"\n",
+    "cont_yet_1min = duckdb.sql(query).df()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Resolve duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"\n",
+    "SELECT *\n",
+    "FROM intermittent_removed\n",
+    "QUALIFY COUNT(*) OVER (PARTITION BY hadm_id, med_category, starttime, statusdescription) > 1\n",
+    "\"\"\"\n",
+    "mac_dups = duckdb.sql(query).df()"
    ]
   },
   {
