feat(med): add imputation of missing dose rate using amount divided by duration in mins; check its validity for 92% of cases where the imputed rate is very close to the populated `originalrate`

--- a/notebooks/med_admin_dev.ipynb
+++ b/notebooks/med_admin_dev.ipynb
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-19 20:51:32,021 - INFO - initialized logging at logs/etl.log\n"
+      "2025-08-20 13:29:31,578 - INFO - initialized logging at logs/etl.log\n"
      ]
     },
     {
@@ -68,7 +68,7 @@
        "<module 'src.tables.medication_admin' from '/Users/wliao0504/code/clif/CLIF-MIMIC/src/tables/medication_admin.py'>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-19 20:51:32,029 - INFO - initialized logging at logs/etl.log\n"
+      "2025-08-20 13:29:31,587 - INFO - initialized logging at logs/etl.log\n"
      ]
     }
    ],
@@ -137,6 +137,15 @@
     "    if len(group) == 2 and are_doses_close(group['med_dose']):\n",
     "        return group.loc[[group['mar_action_name'].str.len().idxmax()]]\n",
     "    return group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pt_demo = pd.read_parquet('tests/clif_patient.parquet')"
    ]
   },
   {
@@ -538,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +564,146 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Remove intermittents (Archive)\n",
+    "## Process continous"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check missing dose `rate`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% of the imputed rates (using amount divided by duration) close to the `originalrate`: 92.5% (93477)\n",
+      "It seeems safe to use the imputed rates to fill the missing `rate`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "med_category\n",
+       "magnesium             82477\n",
+       "sodium bicarbonate    10203\n",
+       "dextrose               6047\n",
+       "insulin                2245\n",
+       "heparin                  87\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"\"\"\n",
+    "SELECT *\n",
+    "    , EXTRACT(EPOCH FROM (endtime - starttime)) / 60 AS duration_in_mins\n",
+    "    , amount / duration_in_mins AS rate_imputed\n",
+    "    , CONCAT(amountuom, '/min') AS rateuom_imputed\n",
+    "    , ABS(originalrate - rate_imputed) AS abs_diff\n",
+    "    , abs_diff / ((originalrate + rate_imputed) / 2) AS rel_diff\n",
+    "    , CASE WHEN rel_diff <= 0.01 OR abs_diff <= 0.000000001 THEN 1 ELSE 0 END AS close_rates\n",
+    "FROM cont_only\n",
+    "WHERE rate IS NULL\n",
+    "\"\"\"\n",
+    "cont_missing_rates = duckdb.sql(query).df()\n",
+    "mask = cont_missing_rates['close_rates'] == 1\n",
+    "print(f\"% of the imputed rates (using amount divided by duration) close to the `originalrate`: {mask.mean() * 100:.1f}% ({mask.sum()})\")\n",
+    "print(\"It seeems safe to use the imputed rates to fill the missing `rate`.\")\n",
+    "\n",
+    "cont_missing_rates.value_counts('med_category')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Flatten start-end timestamps to admin timestamps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cont_lagged = med._prepare_for_timestamp_flattening(cont_only)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check pause\n",
+    "# find demo data to test\n",
+    "query = \"\"\"\n",
+    "SELECT *    \n",
+    "FROM cont_lagged\n",
+    "WHERE statusdescription = 'Paused'\n",
+    "    AND is_last_row = 0\n",
+    "    AND is_first_row = 0\n",
+    "    AND subject_id IN (\n",
+    "        SELECT DISTINCT CAST(patient_id AS INT)\n",
+    "        FROM pt_demo\n",
+    "    )\n",
+    "\"\"\"\n",
+    "\n",
+    "df = duckdb.sql(query).df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cont_flattened = med._flatten_timestamps(cont_lagged, \"rate\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mar_action_name\n",
+       "ChangeDose/Rate    1722394\n",
+       "start              1195110\n",
+       "FinishedRunning     814202\n",
+       "Stopped             265415\n",
+       "Paused              215448\n",
+       "Bolus                  566\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cont_flattened.value_counts('mar_action_name')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Intermittents (Archive)\n",
     "This part needs updating as it was built to generate cont only without considering keeping intm."
    ]
   },
@@ -568,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -602,11 +750,11 @@
     "WHERE {find_intm_where_clause}\n",
     "\n",
     "\"\"\"\n",
-    "mac_intm = duckdb.sql(query).df()\n",
+    "intm_only = duckdb.sql(query).df()\n",
     "\n",
-    "print(f\"# of intermittents identified through ordercategoryname that failed the 1-min rule: {mac_intm.not_1min_ordercategoryname.sum()}\")\n",
-    "print(f\"# of intermittents identified through ordercategorydescription that failed the 1-min rule: {mac_intm.not_1min_ordercategorydescription.sum()}\")\n",
-    "print(f\"# of intermittents identified through statusdescription that failed the 1-min rule: {mac_intm.not_1min_statusdescription.sum()}\")"
+    "print(f\"# of intermittents identified through ordercategoryname that failed the 1-min rule: {intm_only.not_1min_ordercategoryname.sum()}\")\n",
+    "print(f\"# of intermittents identified through ordercategorydescription that failed the 1-min rule: {intm_only.not_1min_ordercategorydescription.sum()}\")\n",
+    "print(f\"# of intermittents identified through statusdescription that failed the 1-min rule: {intm_only.not_1min_statusdescription.sum()}\")"
    ]
   },
   {
@@ -618,13 +766,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "query = \"\"\"\n",
     "SELECT *\n",
-    "FROM mac_intm\n",
+    "FROM intm_only\n",
     "WHERE not_1min_statusdescription = 1\n",
     "\"\"\"\n",
     "df = duckdb.sql(query).df()"
@@ -632,11 +780,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check if any of continuous events has 1-min duration\n",
+    "# check if any of continuous events has 1-min duration # FIXME: possibly outdated\n",
     "query = f\"\"\"\n",
     "SELECT *\n",
     "FROM med_selected_and_mapped\n",
@@ -663,7 +811,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Resolve duplicates"
+    "## Resolve duplicates\n",
+    "This is possibly also outdated as we should now consider duplicate using the linearized time."
    ]
   },
   {
@@ -688,31 +837,6 @@
    "source": [
     "# final check there is no dup for god's sake\n",
     "# mac_ldfd.duplicated(subset=meds_keycols, keep=False).sum()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Flatten start-end timestamps to admin timestamps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cont_lagged = med._prepare_for_timestamp_linearization(cont_only)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cont_linearized = med._linearize_timestamps(cont_lagged, \"rate\")"
    ]
   },
   {
