wip(med): save progress in using full join to solve timestamp flattening issue

--- a/notebooks/med_admin_dev.ipynb
+++ b/notebooks/med_admin_dev.ipynb
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-20 13:29:31,578 - INFO - initialized logging at logs/etl.log\n"
+      "2025-08-20 17:21:53,446 - INFO - initialized logging at logs/etl.log\n"
      ]
     },
     {
@@ -68,7 +68,7 @@
        "<module 'src.tables.medication_admin' from '/Users/wliao0504/code/clif/CLIF-MIMIC/src/tables/medication_admin.py'>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-20 13:29:31,587 - INFO - initialized logging at logs/etl.log\n"
+      "2025-08-20 17:21:53,455 - INFO - initialized logging at logs/etl.log\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,20 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-19 18:39:46,946 - INFO - parsing the mapping files to identify relevant items and fetch corresponding events...\n",
-      "2025-08-19 18:39:46,950 - INFO - querying the d_items table to identify which event tables to be separately queried for 79 items\n",
-      "2025-08-19 18:39:46,960 - INFO - identified 1 event tables to be separately queried: ['inputevents']\n",
-      "2025-08-19 18:39:46,961 - INFO - fetching events from inputevents table for 79 items\n",
-      "2025-08-19 18:39:46,961 - WARNING - inputevents not yet supported, thus returning all columns\n",
-      "2025-08-19 18:39:52,479 - INFO - fetched 4845165 events from inputevents table for 79 items\n",
-      "2025-08-19 18:39:52,480 - INFO - concatenated 4845165 events from 1 event table(s)\n"
+      "2025-08-20 16:22:59,609 - INFO - parsing the mapping files to identify relevant items and fetch corresponding events...\n",
+      "2025-08-20 16:22:59,610 - INFO - querying the d_items table to identify which event tables to be separately queried for 79 items\n",
+      "2025-08-20 16:22:59,613 - INFO - identified 1 event tables to be separately queried: ['inputevents']\n",
+      "2025-08-20 16:22:59,613 - INFO - fetching events from inputevents table for 79 items\n",
+      "2025-08-20 16:22:59,613 - WARNING - inputevents not yet supported, thus returning all columns\n",
+      "2025-08-20 16:23:03,086 - INFO - fetched 4845165 events from inputevents table for 79 items\n",
+      "2025-08-20 16:23:03,087 - INFO - concatenated 4845165 events from 1 event table(s)\n"
      ]
     },
     {
@@ -382,7 +382,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -435,15 +435,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- which does not seem relevant:\n",
-      "\n"
+      "\n",
+      "--- which does not seem relevant\n"
      ]
     }
    ],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,16 +665,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cont_flattened = med._flatten_timestamps(cont_lagged, \"rate\")"
+    "cont_flattened = med._flatten_timestamps(cont_lagged, \"rate\")\n",
+    "# RESUME: continue checking the result using the the two focal example orderid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -696,8 +697,30 @@
     }
    ],
    "source": [
-    "cont_flattened.value_counts('mar_action_name')"
+    "# cont_flattened.value_counts('mar_action_name')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "longer = cont_only.query(\"linkorderid == 294375\").melt(\n",
+    "    id_vars = [\n",
+    "        \"hadm_id\", \"linkorderid\", \"med_category\", 'rate', 'rateuom', 'statusdescription'\n",
+    "    ],\n",
+    "    value_vars = [\"starttime\", \"endtime\"],\n",
+    "    var_name = \"time\", value_name = \"admin_dttm\"\n",
+    ").sort_values([\"hadm_id\", \"linkorderid\", \"med_category\", \"admin_dttm\", \"time\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -795,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,19 +854,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# final check there is no dup for god's sake\n",
     "# mac_ldfd.duplicated(subset=meds_keycols, keep=False).sum()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#RESUME: check obsidian note"
    ]
   },
   {
