--- a/notebooks/med_admin_dev.ipynb
+++ b/notebooks/med_admin_dev.ipynb
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-20 17:21:53,446 - INFO - initialized logging at logs/etl.log\n"
+      "2025-08-20 17:37:11,353 - INFO - initialized logging at logs/etl.log\n"
      ]
     },
     {
@@ -68,7 +68,7 @@
        "<module 'src.tables.medication_admin' from '/Users/wliao0504/code/clif/CLIF-MIMIC/src/tables/medication_admin.py'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-20 17:21:53,455 - INFO - initialized logging at logs/etl.log\n"
+      "2025-08-20 17:37:11,363 - INFO - initialized logging at logs/etl.log\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +670,8 @@
    "outputs": [],
    "source": [
     "cont_flattened = med._flatten_timestamps(cont_lagged, \"rate\")\n",
-    "# RESUME: continue checking the result using the the two focal example orderid"
+    "# RESUME: continue checking the result using the the two focal example orderid\n",
+    "# see obsidian"
    ]
   },
   {
