feat(med): implement key step in _flatten_timestamps along with _flatten_timestamps_staging

--- a/notebooks/med_admin_dev.ipynb
+++ b/notebooks/med_admin_dev.ipynb
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-20 17:37:11,353 - INFO - initialized logging at logs/etl.log\n"
+      "2025-08-31 21:13:40,109 - INFO - initialized logging at logs/etl.log\n"
      ]
     },
     {
@@ -68,7 +68,7 @@
        "<module 'src.tables.medication_admin' from '/Users/wliao0504/code/clif/CLIF-MIMIC/src/tables/medication_admin.py'>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,24 +82,43 @@
     "import src.utils\n",
     "reload(src.utils)\n",
     "import duckdb\n",
+    "reload(duckdb)\n",
     "from src.utils import construct_mapper_dict, fetch_mimic_events, load_mapping_csv, \\\n",
     "    get_relevant_item_ids, find_duplicates, rename_and_reorder_cols, save_to_rclif, \\\n",
     "    convert_and_sort_datetime, setup_logging, search_mimic_items\n",
-    "from fuzzywuzzy import process\n",
+    "# from fuzzywuzzy import process\n",
     "import src.tables.medication_admin as med\n",
     "reload(med)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DuckDB version: 1.3.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "duckdb_version = duckdb.__version__\n",
+    "print(f\"DuckDB version: {duckdb_version}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-20 17:37:11,363 - INFO - initialized logging at logs/etl.log\n"
+      "2025-08-31 21:13:40,120 - INFO - initialized logging at logs/etl.log\n"
      ]
     }
    ],
@@ -141,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,20 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-20 16:22:59,609 - INFO - parsing the mapping files to identify relevant items and fetch corresponding events...\n",
-      "2025-08-20 16:22:59,610 - INFO - querying the d_items table to identify which event tables to be separately queried for 79 items\n",
-      "2025-08-20 16:22:59,613 - INFO - identified 1 event tables to be separately queried: ['inputevents']\n",
-      "2025-08-20 16:22:59,613 - INFO - fetching events from inputevents table for 79 items\n",
-      "2025-08-20 16:22:59,613 - WARNING - inputevents not yet supported, thus returning all columns\n",
-      "2025-08-20 16:23:03,086 - INFO - fetched 4845165 events from inputevents table for 79 items\n",
-      "2025-08-20 16:23:03,087 - INFO - concatenated 4845165 events from 1 event table(s)\n"
+      "2025-08-31 21:00:23,237 - INFO - parsing the mapping files to identify relevant items and fetch corresponding events...\n",
+      "2025-08-31 21:00:23,238 - INFO - querying the d_items table to identify which event tables to be separately queried for 79 items\n",
+      "2025-08-31 21:00:23,242 - INFO - identified 1 event tables to be separately queried: ['inputevents']\n",
+      "2025-08-31 21:00:23,243 - INFO - fetching events from inputevents table for 79 items\n",
+      "2025-08-31 21:00:23,243 - WARNING - inputevents not yet supported, thus returning all columns\n",
+      "2025-08-31 21:00:26,572 - INFO - fetched 4845165 events from inputevents table for 79 items\n",
+      "2025-08-31 21:00:26,573 - INFO - concatenated 4845165 events from 1 event table(s)\n"
      ]
     },
     {
@@ -246,7 +265,7 @@
        "      <td>Medications</td>\n",
        "      <td>mg</td>\n",
        "      <td>Solution</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -270,7 +289,7 @@
        "      <td>Fluids/Intake</td>\n",
        "      <td>mL</td>\n",
        "      <td>Solution</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -294,7 +313,7 @@
        "      <td>Medications</td>\n",
        "      <td>mg</td>\n",
        "      <td>Solution</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -318,7 +337,7 @@
        "      <td>Medications</td>\n",
        "      <td>mg</td>\n",
        "      <td>Solution</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -342,7 +361,7 @@
        "      <td>Medications</td>\n",
        "      <td>mg</td>\n",
        "      <td>Solution</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -373,16 +392,16 @@
        "4       4.569556        0.1800  Norepinephrine  Norepinephrine  inputevents   \n",
        "\n",
        "        category unitname param_type lownormalvalue  highnormalvalue  \n",
-       "0    Medications       mg   Solution            NaN              NaN  \n",
-       "1  Fluids/Intake       mL   Solution            NaN              NaN  \n",
-       "2    Medications       mg   Solution            NaN              NaN  \n",
-       "3    Medications       mg   Solution            NaN              NaN  \n",
-       "4    Medications       mg   Solution            NaN              NaN  \n",
+       "0    Medications       mg   Solution           <NA>              NaN  \n",
+       "1  Fluids/Intake       mL   Solution           <NA>              NaN  \n",
+       "2    Medications       mg   Solution           <NA>              NaN  \n",
+       "3    Medications       mg   Solution           <NA>              NaN  \n",
+       "4    Medications       mg   Solution           <NA>              NaN  \n",
        "\n",
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +547,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,6 +575,7 @@
     "FROM med_selected_and_mapped\n",
     "WHERE item_class = 'CONTINUOUS'\n",
     "    OR (item_class = 'BOTH' AND NOT ({find_intm_where_clause}))\n",
+    "ORDER BY hadm_id, med_category, starttime, endtime, linkorderid\n",
     "\"\"\"\n",
     "cont_only = duckdb.sql(query).df()"
    ]
@@ -576,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +619,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,12 +636,12 @@
     "FROM cont_only\n",
     "WHERE rate IS NULL\n",
     "\"\"\"\n",
-    "cont_missing_rates = duckdb.sql(query).df()\n",
-    "mask = cont_missing_rates['close_rates'] == 1\n",
+    "cont_rate_missing = duckdb.sql(query).df()\n",
+    "mask = cont_rate_missing['close_rates'] == 1\n",
     "print(f\"% of the imputed rates (using amount divided by duration) close to the `originalrate`: {mask.mean() * 100:.1f}% ({mask.sum()})\")\n",
     "print(\"It seeems safe to use the imputed rates to fill the missing `rate`.\")\n",
     "\n",
-    "cont_missing_rates.value_counts('med_category')"
+    "cont_rate_missing.value_counts('med_category')"
    ]
   },
   {
@@ -633,7 +653,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "given there are only 20 cases, we might consider dropping them all\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check monotonicity\n",
+    "q = \"\"\"\n",
+    "SELECT *\n",
+    "    , LAG(endtime) OVER (PARTITION BY hadm_id, med_category, linkorderid ORDER BY starttime) AS endtime_prev\n",
+    "    , starttime < endtime_prev AS crossover\n",
+    "FROM cont_only\n",
+    "QUALIFY crossover is True\n",
+    "-- ORDER BY hadm_id, med_category, starttime, endtime, linkorderid\n",
+    "ORDER BY hadm_id, starttime, endtime, linkorderid, med_category\n",
+    "\"\"\"\n",
+    "crossovers = duckdb.sql(q).df()\n",
+    "print(f\"given there are only {len(crossovers)} cases, we might consider dropping them all\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,68 +690,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check pause\n",
+    "# Check pause #\n",
     "# find demo data to test\n",
     "query = \"\"\"\n",
     "SELECT *    \n",
     "FROM cont_lagged\n",
-    "WHERE statusdescription = 'Paused'\n",
+    "WHERE statusdescription = 'FinishedRunning'\n",
     "    AND is_last_row = 0\n",
     "    AND is_first_row = 0\n",
+    "    -- AND subject_id IN (SELECT DISTINCT CAST(patient_id AS INT) FROM pt_demo)\n",
+    "\"\"\"\n",
+    "df = duckdb.sql(query).df()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 'Stopped' for the full sample (i.e. not just the MIMIC demo) would yield zero row, meaning it is not an issue.\n",
+    "- 'Paused' and 'FinishedRunning' both yield results, meaning these are cases we need to hanlde. Unfortunately there are qualifying rows for 'FinishedRunning' in the demo data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cont_flattened_staging = med._flatten_timestamps_staging(cont_only, \"rate\")\n",
+    "cont_flattened = med._flatten_timestamps(cont_flattened_staging, \"rate\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = \"\"\"\n",
+    "SELECT *\n",
+    "    , CASE WHEN med_dose IS NULL THEN 1 ELSE 0 END AS dose_missing\n",
+    "FROM cont_flattened\n",
+    "WHERE mar_action_name = 'Paused' \n",
     "    AND subject_id IN (\n",
     "        SELECT DISTINCT CAST(patient_id AS INT)\n",
     "        FROM pt_demo\n",
     "    )\n",
     "\"\"\"\n",
-    "\n",
-    "df = duckdb.sql(query).df()"
+    "df2 = duckdb.sql(q).df()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cont_flattened = med._flatten_timestamps(cont_lagged, \"rate\")\n",
-    "# RESUME: continue checking the result using the the two focal example orderid\n",
-    "# see obsidian"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "mar_action_name\n",
-       "ChangeDose/Rate    1722394\n",
-       "start              1195110\n",
-       "FinishedRunning     814202\n",
-       "Stopped             265415\n",
-       "Paused              215448\n",
-       "Bolus                  566\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# cont_flattened.value_counts('mar_action_name')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,13 +758,6 @@
     "    var_name = \"time\", value_name = \"admin_dttm\"\n",
     ").sort_values([\"hadm_id\", \"linkorderid\", \"med_category\", \"admin_dttm\", \"time\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
