wip(med): save progress in investigating rate missing issue

--- a/notebooks/med_admin_dev.ipynb
+++ b/notebooks/med_admin_dev.ipynb
@@ -596,15 +596,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "% of the imputed rates (using amount divided by duration) close to the `originalrate`: 92.5% (93477)\n",
-      "It seeems safe to use the imputed rates to fill the missing `rate`.\n"
+      "Overall there are 101059 (3.3%) rows with missing `rate`.\n",
+      "Only 7.5% (7582) of the imputed rates (using amount divided by duration) deviate from the `originalrate`.\n",
+      "It seeems safe to use the imputed rates to fill the missing `rate`.\n",
+      "And 98.2% (7442) of the 7582 deviated cases are caused by a zero `originalrate`, which is odd and does not seem valid.\n"
      ]
     },
     {
@@ -619,12 +621,13 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#RESUME\n",
     "query = \"\"\"\n",
     "SELECT *\n",
     "    , EXTRACT(EPOCH FROM (endtime - starttime)) / 60 AS duration_in_mins\n",
@@ -633,14 +636,20 @@
     "    , ABS(originalrate - rate_imputed) AS abs_diff\n",
     "    , abs_diff / ((originalrate + rate_imputed) / 2) AS rel_diff\n",
     "    , CASE WHEN rel_diff <= 0.01 OR abs_diff <= 0.000000001 THEN 1 ELSE 0 END AS close_rates\n",
+    "    , COALESCE(rate, rate_imputed) AS _rate\n",
+    "    , COALESCE(rateuom, rateuom_imputed) AS _rateuom\n",
     "FROM cont_only\n",
     "WHERE rate IS NULL\n",
     "\"\"\"\n",
     "cont_rate_missing = duckdb.sql(query).df()\n",
-    "mask = cont_rate_missing['close_rates'] == 1\n",
-    "print(f\"% of the imputed rates (using amount divided by duration) close to the `originalrate`: {mask.mean() * 100:.1f}% ({mask.sum()})\")\n",
+    "print(f\"Overall there are {cont_rate_missing.shape[0]} ({cont_rate_missing.shape[0]/cont_only.shape[0] * 100:.1f}%) rows with missing `rate`.\")\n",
+    "\n",
+    "mask = cont_rate_missing['close_rates'] == 0\n",
+    "print(f\"Only {mask.mean() * 100:.1f}% ({mask.sum()}) of the imputed rates (using amount divided by duration) deviate from the `originalrate`.\")\n",
     "print(\"It seeems safe to use the imputed rates to fill the missing `rate`.\")\n",
     "\n",
+    "mask2 = (cont_rate_missing['close_rates'] == 0) & (cont_rate_missing['originalrate'] == 0)\n",
+    "print(f\"And {mask2.sum()/mask.sum() * 100:.1f}% ({mask2.sum()}) of the {mask.sum()} deviated cases are caused by a zero `originalrate`, which is odd and does not seem valid.\")\n",
     "cont_rate_missing.value_counts('med_category')"
    ]
   },
